Added sections and experience

--- a/index.html
+++ b/index.html
@@ -52,9 +52,52 @@
                     </li>
                 </ul>
             </nav>
-            <article class="about">
-
-            </article>
+            <section class="about">
+                    <h2>About</h2>
+            </section>
+            <section class="education">
+                    <h2>Education</h2>
+                    <div>
+                        <h3>University of Michigan Dearborn</h3>
+                        <p>Bachelors in Computer and Information Science</p>
+                        <p>GPA: 3.97</p>
+                    </div>
+            </section>
+            <section class="experience">
+                    <h2>Experience</h2>
+                    <div>
+                        <h3>Computer Vision Research Assistant at U of M Dearborn</h3>
+                        <p>May 2023 - September 2023</p>
+                        <ul>
+                            <li><p>Assisted in creating a drone-car collaborative testbed focusing on the use of a drone to extend vision systems for autonomous vehicles</p></li>
+                            <li><p>Developed multiple real-time object detection algorithms using OPENCV, YOLO, and Python</p></li>
+                            <li><p>Trained and implemented YOLO computer vision models using the Darknet framework</p></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Freelance Queue System Coding</h3>
+                        <p>March 2023 - Present</p>
+                        <ul>
+                            <li><p>One on one tutoring with students in an intro computer science class</p></li>
+                            <li><p>Taught core beginner coding concepts such as variables, data types, if/else statements, loops, classes, etc.</p></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Independent Coding Tutor</h3>
+                        <p>September 2021 - December 2021</p>
+                        <ul>
+                            <li><p>Assisted in creating a drone-car collaborative testbed focusing on the use of a drone to extend vision systems for autonomous vehicles</p></li>
+                            <li><p>Developed multiple real-time object detection algorithms using OPENCV, YOLO, and Python</p></li>
+                            <li><p>Trained and implemented YOLO computer vision models using the Darknet framework</p></li>
+                        </ul>
+                    </div>
+            </section>
+            <section class="projects">
+                    <h2>Projects</h2>
+            </section>
+            <section class="skills">
+                    <h2>Skills</h2>
+            </section>
         </div>
     </main>
 </body>
