Fixing title and nav and starting skills

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Pulsing Background</title>
+    <link href="images/Fuecoco.png" rel="icon" type="image/png" />
+    <title>Jonathan Schall Portfolio</title>
 </head>
 <body>
     <div class="background-container">
@@ -39,23 +40,26 @@
             <nav>
                 <ul>
                     <li>
-                        <button class="">About</button>
+                        <a href="#about">About</a>
                     </li>
                     <li>
-                        <button class="">Projects</button>
+                        <a href="#education">Education</a>
                     </li>
                     <li>
-                        <button class="">Resume</button>
+                        <a href="#experience">Experience</a>
                     </li>
                     <li>
-                        <button class="">Contact</button>
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#skills">Skills</a>
                     </li>
                 </ul>
             </nav>
-            <section class="about">
+            <section id="about">
                     <h2>About</h2>
             </section>
-            <section class="education">
+            <section id="education">
                     <h2>Education</h2>
                     <div>
                         <h3>University of Michigan Dearborn</h3>
@@ -63,7 +67,7 @@
                         <p>GPA: 3.97</p>
                     </div>
             </section>
-            <section class="experience">
+            <section id="experience">
                     <h2>Experience</h2>
                     <div>
                         <h3>Computer Vision Research Assistant at U of M Dearborn</h3>
@@ -92,11 +96,26 @@
                         </ul>
                     </div>
             </section>
-            <section class="projects">
+            <section id="projects">
                     <h2>Projects</h2>
             </section>
-            <section class="skills">
+            <section id="skills">
                     <h2>Skills</h2>
+                    <div>
+                        <div>
+                            <h3>Languages</h3>
+                            <ul></ul>
+                        </div>
+                        <div>
+                            <h3>Computer Vision</h3>
+                            <ul></ul>
+                        </div>
+                        <div>
+                            <h3>Web Development</h3>
+                            <ul></ul>
+                        </div>
+                    </div>
+                    
             </section>
         </div>
     </main>
