--- a/index.html
+++ b/index.html
@@ -101,18 +101,34 @@
             </section>
             <section id="skills">
                     <h2>Skills</h2>
-                    <div>
+                    <div class="skillflex">
                         <div>
                             <h3>Languages</h3>
-                            <ul></ul>
+                            <ul>
+                                <li><p>Python</p></li>
+                                <li><p>C++</p></li>
+                                <li><p>C#</p></li>
+                                <li><p>Java</p></li>
+                            </ul>
                         </div>
                         <div>
                             <h3>Computer Vision</h3>
-                            <ul></ul>
+                            <ul>
+                                <li><p>YOLO</p></li>
+                                <li><p>OpenCV</p></li>
+                                <li><p>Darknet</p></li>
+                                <li><p>Google Colab</p></li>
+                            </ul>
                         </div>
                         <div>
                             <h3>Web Development</h3>
-                            <ul></ul>
+                            <ul>
+                                <li><p>Html</p></li>
+                                <li><p>CSS</p></li>
+                                <li><p>Javascript</p></li>
+                                <li><p>Django</p></li>
+                                <li><p>Flask</p></li>
+                            </ul>
                         </div>
                     </div>
                     
