Slight header fix and fixed skills

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Add your background objects here -->
     </div>
     <main>
-        <article class="navigation">
+        <header class="navigation">
             <nav>
                 <ul>
                     <li>
@@ -39,7 +39,7 @@
                 </ul>
             </nav>
             
-        </article>
+        </header>
         <div class="core">
             
             <section id="about">
@@ -53,10 +53,13 @@
                             <h3>Personal Information</h3>
                             <ul>
                                 <li>
-                                    <a href="">jonathan.c.schall@gmail.com</a>
+                                    <a href="https://github.com/JaySchall">github.com/JaySchall</a>
                                 </li>
                                 <li>
-                                    <a href="">734-306-7799</a>
+                                    <p>jonathan.c.schall@gmail.com</p>
+                                </li>
+                                <li>
+                                    <p>734-306-7799</p>
                                 </li>
                                 <li>
                                     <p>Plymouth. MI, USA</p>
@@ -109,7 +112,7 @@
             </section>
             <section id="skills">
                     <h2>Skills</h2>
-                    <div class="skillflex">
+                    <div class="grid">
                         <div>
                             <h3>Languages</h3>
                             <ul>
@@ -136,6 +139,14 @@
                                 <li><p>Javascript</p></li>
                                 <li><p>Django</p></li>
                                 <li><p>Flask</p></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Database</h3>
+                            <ul>
+                                <li><p>SQL</p></li>
+                                <li><p>SQLite</p></li>
+                                <li><p>Firebase</p></li>
                             </ul>
                         </div>
                     </div>
