Added projects and initial mobile setup

--- a/index.html
+++ b/index.html
@@ -109,6 +109,20 @@
             </section>
             <section id="projects">
                     <h2>Projects</h2>
+                    <div>
+                        <h3>Pokemon Card Search Engine</h3>
+                        <ul>
+                            <li><p>Search engine capable of searching through over 13,000 Pokemon cards using natural language processing and info retrieval</p></li>
+                            <li><p>Uses python to generate an inverted index and to display the cards </p></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Search-A-Meal Site</h3>
+                        <ul>
+                            <li><p>Django web app designed to provide an easy way to search and keep track of recipes. Users can create an account and bookmark recipes to save them in their account</p></li>
+                            <li><p>All recipes and user data stored inside SQLite database</p></li>
+                        </ul>
+                    </div>
             </section>
             <section id="skills">
                     <h2>Skills</h2>
