--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <div class="background-container">
-        <img id="four" class="background-object" src="images/Smolive.png" alt="Smolive">
-        <img id="two" class="background-object" src="images/Sylveon.png" alt="Sylveon">
-        <img id="three" class="background-object" src="images/Fuecoco.png" alt="Fuecoco">
-        <img id="one" class="background-object" src="images/Sprigatito.png" alt="Sprigatito">
-        <img id="five" class="background-object" src="images/Quaxly.png" alt="Quaxly">
-        <img id="six" class="background-object" src="images/Dunceparce.png" alt="Dunceparce">
+        <div class="left">
+            <img id="one" class="background-object" src="images/Sprigatito.png" alt="Sprigatito">
+            <img id="three" class="background-object" src="images/Fuecoco.png" alt="Fuecoco">
+            <img id="five" class="background-object" src="images/Quaxly.png" alt="Quaxly">
+        </div>
+        <div class="right">
+            <img id="two" class="background-object" src="images/Sylveon.png" alt="Sylveon">
+            <img id="four" class="background-object" src="images/Smolive.png" alt="Smolive">
+            <img id="six" class="background-object" src="images/Dunceparce.png" alt="Dunceparce">
+        </div>
         <!-- Add your background objects here -->
     </div>
     <main>
